--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -15,7 +15,7 @@ jobs:
             operating-sytem: windows-latest
     runs-on: ${{ matrix.operating-system }}
     steps:
-      - nane: Get Code 
+      - name: Get Code 
         uses: actions/checkout@v3
       - name: Install Node.js
         uses: actions/setup-node@v3
