--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,8 +7,18 @@ on:
         required: false
         default: dist
         type: string
+    outputs: 
+      result: 
+        description: The result of the deployment operation
+        value: ${{ jobs.deploy.outputs.outcome }}
+    # secrets:
+    #   some-secret:
+    #     required: true
 jobs:
+
   deploy: 
+    outputs:
+      outcome:  ${{ steps.set-result.outputs.result-output }}
     runs-on: ubuntu-latest
     steps:
       - name: Get Artifact
@@ -19,3 +29,6 @@ jobs:
         run: ls
       - name: Output Information
         run: echo "Deploying & Uploading..."
+      - name: Set result output
+        id: set-result
+        run: echo "step-result=success" >> $GITHUB_OUTPUT
