--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -18,7 +18,7 @@ jobs:
 
   deploy: 
     outputs:
-      outcome:  ${{ steps.set-result.outputs.result-output }}
+      outcome:  ${{ steps.set-result.outputs.step-result }}
     runs-on: ubuntu-latest
     steps:
       - name: Get Artifact
